@@ -147,11 +147,12 @@ public class ActionSet
 	 * Creates a new action set.
 	 * @param plugin The plugin
 	 * @param cachedActionNames The list of cached action names
+	 * @param cachedActionToggleFlags The list of cached action toggle flags
 	 * @param uri The actions.xml URI
-	 * @since jEdit 4.2pre1
+	 * @since jEdit 4.2pre2
 	 */
 	public ActionSet(PluginJAR plugin, String[] cachedActionNames,
-		URL uri)
+		boolean[] cachedActionToggleFlags, URL uri)
 	{
 		this();
 		this.plugin = plugin;
@@ -161,6 +162,9 @@ public class ActionSet
 			for(int i = 0; i < cachedActionNames.length; i++)
 			{
 				actions.put(cachedActionNames[i],placeholder);
+				jEdit.setTemporaryProperty(cachedActionNames[i]
+					+ ".toggle",cachedActionToggleFlags[i]
+					? "true" : "false");
 			}
 		}
 		loaded = false;
